--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    viewBinding {
+        enabled = true
+    }
+
     buildFeatures {
+        dataBinding true
         viewBinding true
     }
 
