implementing (test) banner & interstitial ads

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,13 +74,13 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
     // Room
-    implementation "androidx.room:room-runtime:2.3.0"
-    kapt "androidx.room:room-compiler:2.3.0"
-    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.room:room-runtime:2.4.0"
+    kapt "androidx.room:room-compiler:2.4.0"
+    implementation "androidx.room:room-ktx:2.4.0"
 
     // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
 
 
     // Hilt
@@ -105,6 +105,8 @@ dependencies {
     // Json
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    // admob
+    implementation 'com.google.android.gms:play-services-ads:20.5.0'
 
 }
 
