--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         google()
+        //noinspection JcenterRepositoryObsolete
         jcenter()
     }
 
@@ -19,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        //noinspection JcenterRepositoryObsolete
         jcenter()
     }
 }
