--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.android_a865.estimatescalculator"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 9
-        versionName "1.8"
+        versionCode 10
+        versionName "1.9"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -43,6 +43,16 @@ android {
         jvmTarget = '1.8'
         freeCompilerArgs += "-Xopt-in=kotlin.coroutines.ExperimentalCoroutinesApi"
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+
+    }
+
 }
 
 
@@ -96,6 +106,9 @@ dependencies {
 
     // google billing
     implementation 'com.android.billingclient:billing:4.0.0'
+
+    // Excel files
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // PDF files
     implementation 'com.itextpdf:itextg:5.5.10'
