--- a/build.gradle
+++ b/build.gradle
@@ -3,25 +3,31 @@ buildscript {
     repositories {
         google()
         //noinspection JcenterRepositoryObsolete
-        jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 
+
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.33-beta"
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.android.tools.build:gradle:8.6.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.7.7'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.50'
+        classpath 'com.google.gms:google-services:4.4.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+
+
 allprojects {
     repositories {
         google()
         //noinspection JcenterRepositoryObsolete
-        jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
