--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ kotlin.code.style=official
 kapt.incremental.apt=true
 android.databinding.incremental=true
 kapt.use.worker.api=true
+android.suppressUnsupportedCompileSdk=34
