--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kapt.incremental.apt=true
 android.databinding.incremental=true
 kapt.use.worker.api=true
 android.suppressUnsupportedCompileSdk=34
+org.gradle.configuration-cache=true
