--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,11 +115,27 @@ dependencies {
     // for PDF Viewer
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
 
+    // admob
+    implementation 'com.google.android.gms:play-services-ads:23.3.0'
+
+    //   SERVER FEATURE
     // Json
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    // admob
-    implementation 'com.google.android.gms:play-services-ads:23.3.0'
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    // ktor & WebSockets
+    // Client
+    implementation "io.ktor:ktor-client-core:2.3.3"
+    implementation "io.ktor:ktor-client-cio:2.3.3"
+    implementation "io.ktor:ktor-client-websockets:2.3.3"
+    
+    // Server
+    implementation "io.ktor:ktor-server-core:2.3.3"
+    implementation "io.ktor:ktor-server-netty:2.3.3"
+    implementation "io.ktor:ktor-server-websockets:2.3.3"
 
 }
 
