--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
 
     defaultConfig {
         applicationId "com.android_a865.estimatescalculator"
-        minSdkVersion 31
-        targetSdkVersion 34
+        minSdk 24
+        targetSdk 34
         versionCode 10
         versionName "2.0"
 
@@ -24,7 +24,7 @@ android {
     //viewBinding { enabled = true }
 
     buildFeatures {
-        dataBinding true
+        //dataBinding true
         viewBinding true
     }
 
@@ -40,8 +40,8 @@ android {
         freeCompilerArgs += "-Xopt-in=kotlin.coroutines.ExperimentalCoroutinesApi"
     }
     compileOptions {
-        sourceCompatibility "1.8"
-        targetCompatibility "1.8"
+        sourceCompatibility = JavaVersion.current()
+        targetCompatibility = JavaVersion.current()
     }
 
 
@@ -51,7 +51,8 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
-
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/io.netty.versions.properties'
     }
 
 }
