--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,12 +131,16 @@ dependencies {
     // Client
     implementation "io.ktor:ktor-client-core:2.3.3"
     implementation "io.ktor:ktor-client-cio:2.3.3"
+    implementation "io.ktor:ktor-client-serialization:2.3.4"
     implementation "io.ktor:ktor-client-websockets:2.3.3"
     
     // Server
     implementation "io.ktor:ktor-server-core:2.3.3"
+    implementation "io.ktor:ktor-server-cio:2.3.3"
     implementation "io.ktor:ktor-server-netty:2.3.3"
     implementation "io.ktor:ktor-server-websockets:2.3.3"
+    implementation "io.ktor:ktor-serialization-gson:2.3.4"
+    implementation("io.ktor:ktor-server-content-negotiation:2.3.4")
 
 }
 
